# jsengine

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  main.js  manual.js  memo.txt  vcpkg.json
.github/workflows/: release-win.yml
cmake/: embed_js.cmake  embed_sysinit.cmake
data/: main.js  test_regexp.js
data/demos/: demo11_scene_showcase.js  demo12_flashy_ui.js
data/framework/: assets_ext.js  i18n.js  input_action.js  perf_hud.js  save_data.js  scene_manager.js  sound_manager.js  ui_effects.js
data/i18n/: demo11_en.json  demo11_ja.json  demo11_zh-CN.json
data/lib/: browser_shim.js  pixi-ui-deps-shim.js  pixi-ui.js  polyfill.js  three.es5.js
doc/: duktape-bug-string-replace-64bit.md
docs/: demo10_reference.html  demo10_text_compare.html  demo10_verification.md  demo2_reference.html  demo2_verification.md  demo3_reference.html  demo3_text_verification.md  demo4_reference.html  demo4_verification.md  demo6_reference.html  demo6_verification.md  demo7_reference.html  demo7_verification.md
glad/: CMakelists.txt
glad/include/glad/: egl.h  gles2.h
glad/src/: egl.c  gles2.c
samples/anime25d/: README.md  main.js
samples/anime25d/lib/: ag-psd.min.js  genericparts.js  rigger.js
samples/anime25d/rig25d/: avatar.js  loader.js  ui_panel.js
samples/vrm_starter/: README.md  main.js
samples/vrm_starter/lib/: three-vrm-animation.module.min.js
samples/vrm_starter/scenes/: dialogue_scene.js  explore_scene.js  novel_scene.js
samples/vrm_starter/vrmkit/: actor.js  camera_rig.js  core.js  novel_ui.js  overlay.js  script_runner.js  stage.js  vrmkit.js
src/: app.cpp  app.hpp  canvas2d.cpp  canvas2d.h  dukwebgl.cpp  dukwebgl.h  image_decode_pool.cpp  image_decode_pool.h  jsengine.cpp  jsengine.hpp  main.cpp  repl.cpp  repl.h  rpgmv_main.js  sysinit.js  video.cpp  video.h  webaudio.cpp  webaudio.h  webgamepad.cpp  webgamepad.h  webgl.cpp  webgl.h
src/audio/: AudioEngine.cpp  AudioEngine.h  AudioStream.cpp  AudioStream.h  ma_libopus.c  ma_libopus.h  ma_libvorbis.c  ma_libvorbis.h  miniaudio.h
src/duktape/: duktape.c
tools/: bump_version.ps1  gen_audio_assets.py  package_win.ps1
